# l_vrc_console

./: Cargo.toml
documents/: channel_architecture.md
examples/: graph_example.rs
src/: config.rs  main.rs
src/controllers/: mod.rs
src/queues/: mod.rs  view_command.rs
src/ui/: mod.rs  viewer.rs
src/ui/components/: mod.rs  usage_gauge.rs
src/ui/views/: cpu_cores.rs  mod.rs  status.rs  system_monitor.rs  vrchat_page.rs
