[package]
name = "l_vrc_console"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.30.0", features = ["crossterm"] }
crossterm = "0.29.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
tokio = { version = "1.28.2", features = ["full"] }
vrchatapi = "^1.0"
serde = { version = "1.0", features = ["derive"] }
rosc = "0.11.4"
